# Battle_nemesis

./: CMakeLists.txt  README.md
include/: map.hpp  tile.hpp  unit.hpp
resources/layouts/: map.txt  player1.txt  player2.txt
src/: main.cpp  map.cpp  tile.cpp  unit.cpp
